Changelog for UserFiles.

2.1.0-beta (10.03.2016)
==============
- Add vendors "bs3modal", "bs3dialog", "canvastoblob"

2.0.9-beta (10.03.2016)
==============
- Add template "edit"

2.0.8-beta (10.03.2016)
==============
- Remove local vendors
- Add remote vendors

2.0.7-beta (06.03.2016)
==============
- Improved web processors
- Add salt setting

2.0.6-beta (06.03.2016)
==============
- Improved compatibility with MiniShop2, Tickets

2.0.5-beta (28.02.2016)
==============
- Improved compatibility with the old table
- Add setting for duplicate search
- Fix copy link
- Fix get mime-type for thumbnails
- Fix work with remote sources

2.0.4-beta (27.02.2016)
==============
- Add sort

2.0.3-beta (27.02.2016)
==============
- Improved compatibility with the old table

2.0.2-beta (26.02.2016)
==============
- Add ModPNotify
- Add update.class.php
- Add install validator

2.0.1-beta (25.02.2016)
==============
- Add lexicon
- Add settings

2.0.0-beta
==============
- Initial