@@ -3,6 +3,7 @@ Changelog for UserFiles.
 2.1.0-beta (10.03.2016)
 ==============
 - Add vendors "bs3modal", "bs3dialog", "canvastoblob"
+- Add edit window to front
 
 2.0.9-beta (10.03.2016)
 ==============
